# askari-patrol-mcp-server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
scripts/: chat.py  manage_dozzle.py
src/: api.py  main.py  schemas.py  server.py
src/askari_patrol_client/: agent.py  db.py  prompts.py  whatsapp_client.py
src/askari_patrol_client/formatters/: whatsapp_formatter.py
src/askari_patrol_client/prompts/: WhatsApp.md  cli.md  system.md
src/askari_patrol_client/tests/: test_agent.py
src/askari_patrol_server/: api.py  server.py
src/askari_patrol_server/decorators/: track_errors.py
src/common/: logging_config.py  rollbar_config.py  schemas.py  utils.py  whatsapp.py
src/common/schemas/: base_schemas.py  pagination_schemas.py  response_schemas.py
src/common/tests/: test_whatsapp.py
tests/: conftest.py  test_client.py
